BootstrapColorPicker - updated to latestt FW

--- a/Controls/BootstrapColorpicker/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/BootstrapColorpicker/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,23 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
 	<PackageId>DotVVM.Contrib.BootstrapColorpicker</PackageId>
-    <PackageVersion>2.4.0</PackageVersion>
     <Authors>DotVVM Contrib</Authors>
     <Description>The BootstrapColorpicker control for DotVVM made by DotVVM Contrib community.</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
-    <PackageLicenseUrl>https://github.com/riganti/dotvvm-contrib/blob/master/LICENSE</PackageLicenseUrl>
-	<GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>DotVVM.Contrib.BootstrapColorpicker</AssemblyName>
   </PropertyGroup>
 
