--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -1,22 +1,30 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<Content Include="**\*.dothtml" />
+		<!--Include Views-->
+		<Content Include="**/*.dothtml" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include MasterPage Views-->
+		<Content Include="**/*.dotmaster" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include Custom Control Views-->
+		<Content Include="**/*.dotcontrol" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Content Include="Views\_master.dotmaster" />
 	</ItemGroup>
 	<ItemGroup>
 		<Folder Include="wwwroot\Content\Lib\" />
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
-		<PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+		<!--<PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />-->
 		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
 	</ItemGroup>
   <ItemGroup>
