--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib.Tests2/DotVVM.Contrib.Tests.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib.Tests2/DotVVM.Contrib.Tests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -17,11 +17,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="MSTest.TestAdapter" Version="1.4.0" />
-    <PackageReference Include="MSTest.TestFramework" Version="1.4.0" />
-    <PackageReference Include="Riganti.Selenium.AssertApi" Version="2.0.4" />
-    <PackageReference Include="Riganti.Selenium.MSTest2Integration" Version="2.0.4" />
+	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkVersion)" />
+	  <PackageReference Include="xunit" Version="$(XunitVersion)" />
+	  <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+	  </PackageReference>
+	  <PackageReference Include="Riganti.Selenium.xUnitIntegration" Version="$(RigantiSeleniumVersion)" />
+	  <PackageReference Include="Riganti.Selenium.AssertApi" Version="$(RigantiSeleniumVersion)" />
   </ItemGroup>
 
 </Project>
