--- a/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.CkEditorMinimal.csproj
+++ b/Controls/CkEditorMinimal/src/DotVVM.Contrib/DotVVM.Contrib.CkEditorMinimal.csproj
@@ -1,25 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
-	<PackageId>DotVVM.Contrib.CkEditorMinimal</PackageId>
-    <PackageVersion>3.0.0-preview01-final</PackageVersion>
+  	<TargetFrameworks>netstandard2.1</TargetFrameworks>
+	  <PackageId>DotVVM.Contrib.CkEditorMinimal</PackageId>	
     <Authors>DotVVM Contrib</Authors>
     <Description>The CkEditorMinimal control for DotVVM made by DotVVM Contrib community.</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
-    <PackageLicenseUrl>https://github.com/riganti/dotvvm-contrib/blob/master/LICENSE</PackageLicenseUrl>
-	<GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>DotVVM.Contrib.CkEditorMinimal</AssemblyName>
-    <Version>2.0.0-preview03</Version>
   </PropertyGroup>
 
   <ItemGroup>
