FAIcon - updated to latest FW

--- a/Controls/FAIcon/src/CodeGenerator/CodeGenerator.csproj
+++ b/Controls/FAIcon/src/CodeGenerator/CodeGenerator.csproj
@@ -6,7 +6,7 @@
         <OutputPath>bin</OutputPath>
         <OutputType>Exe</OutputType>
         <RootNamespace>FontAwesomeCS.CodeGenerator</RootNamespace>
-        <TargetFramework>netcoreapp2.0</TargetFramework>
+        <TargetFramework>net6</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
