--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -1,22 +1,28 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-  </PropertyGroup>
-  <ItemGroup>
-    <Content Include="**\*.dothtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="dotvvm_serialized_config.json.tmp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\_master.dotmaster" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.1" />
-    <PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.GoogleAnalyticsJavascript.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+	</PropertyGroup>
+	<ItemGroup>
+		<!--Include Views-->
+		<Content Include="**/*.dothtml" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include MasterPage Views-->
+		<Content Include="**/*.dotmaster" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include Custom Control Views-->
+		<Content Include="**/*.dotcontrol" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+	</ItemGroup>
+	<ItemGroup>
+		<None Remove="dotvvm_serialized_config.json.tmp" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.GoogleAnalyticsJavascript.csproj" />
+	</ItemGroup>
 </Project>
