--- a/Controls/MultilevelMenu/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/MultilevelMenu/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,33 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.0;net451</TargetFrameworks>
-	<PackageId>DotVVM.Contrib.MultilevelMenu</PackageId>
-    <PackageVersion>2.5.0</PackageVersion>
-    <Authors>DotVVM Contrib</Authors>
-    <Description>The MultilevelMenu control for DotVVM made by DotVVM Contrib community.</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
-    <PackageLicenseUrl>https://github.com/riganti/dotvvm-contrib/blob/master/LICENSE</PackageLicenseUrl>
-	<GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <AssemblyName>DotVVM.Contrib.MultilevelMenu</AssemblyName>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<PackageId>DotVVM.Contrib.MultilevelMenu</PackageId>
+		<Description>The MultilevelMenu control for DotVVM made by DotVVM Contrib community.</Description>
+		<AssemblyName>DotVVM.Contrib.MultilevelMenu</AssemblyName>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Scripts\DotVVM.Contrib.MultilevelMenu.js" />
-    <EmbeddedResource Include="Styles\DotVVM.Contrib.MultilevelMenu.css" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Scripts\DotVVM.Contrib.MultilevelMenu.js" />
+		<EmbeddedResource Include="Styles\DotVVM.Contrib.MultilevelMenu.css" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
+	</ItemGroup>
 
 </Project>
