--- a/Controls/PolicyView/src/DotVVM.Contrib.Tests/DotVVM.Contrib.Tests.csproj
+++ b/Controls/PolicyView/src/DotVVM.Contrib.Tests/DotVVM.Contrib.Tests.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
 
-    <IsPackable>false</IsPackable>
+	  <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,13 +16,15 @@
     </Content>
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.6.1" />
-    <PackageReference Include="xunit" Version="2.3.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
-    <PackageReference Include="Riganti.Selenium.xUnitIntegration" Version="2.0.1" />
-    <PackageReference Include="Riganti.Selenium.AssertApi" Version="2.0.1" />
-    <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="$(MicrosoftNETTestSdkVersion)" />
+		<PackageReference Include="xunit" Version="$(XunitVersion)" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+		<PackageReference Include="Riganti.Selenium.xUnitIntegration" Version="$(RigantiSeleniumVersion)" />
+		<PackageReference Include="Riganti.Selenium.AssertApi" Version="$(RigantiSeleniumVersion)" />
+	</ItemGroup>
 
 </Project>
