--- a/Controls/QrCode/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
+++ b/Controls/QrCode/src/DotVVM.Contrib.Samples/DotVVM.Contrib.Samples.csproj
@@ -1,20 +1,25 @@
 ﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
-		<TargetFramework>netcoreapp2.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<Content Include="**/*.dothtml;**/*.dotmaster;**/*.dotcontrol" Exclude="obj/**/*.*;bin/**/*.*" CopyToPublishDirectory="Always" />
+		<!--Include Views-->
+		<Content Include="**/*.dothtml" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include MasterPage Views-->
+		<Content Include="**/*.dotmaster" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<!--Include Custom Control Views-->
+		<Content Include="**/*.dotcontrol" Exclude="obj/**/*.*;bin/**/*.*">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
 	</ItemGroup>
 	<ItemGroup>
 		<None Remove="dotvvm_serialized_config.json.tmp" />
-		<None Remove="**/*.dothtml;**/*.dotmaster;**/*.dotcontrol" />
 	</ItemGroup>
 	<ItemGroup>
-		<Folder Include="wwwroot\" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore" Version="2.0.2" />
-		<PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.0.2" />
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 		<PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.172" />
 	</ItemGroup>
