TypeAhead - updated to latest FW

--- a/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
+++ b/Controls/TypeAhead/src/DotVVM.Contrib/DotVVM.Contrib.csproj
@@ -1,38 +1,25 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net451</TargetFrameworks>
-    <LangVersion>9.0</LangVersion>
-    <PackageId>DotVVM.Contrib.TypeAhead</PackageId>
-    <PackageVersion>2.4.0</PackageVersion>
-    <Authors>DotVVM Contrib</Authors>
-    <Description>The TypeAhead control for DotVVM made by DotVVM Contrib community.</Description>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
-    <PackageLicenseUrl>https://github.com/riganti/dotvvm-contrib/blob/master/LICENSE</PackageLicenseUrl>
-	<GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
-    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
-    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
-    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
-    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
-    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
-    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
-    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
-    <PreserveCompilationContext>true</PreserveCompilationContext>
-    <AssemblyName>DotVVM.Contrib.TypeAhead</AssemblyName>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<LangVersion>9.0</LangVersion>
+		<PackageId>DotVVM.Contrib.TypeAhead</PackageId>
+		<AssemblyName>DotVVM.Contrib.TypeAhead</AssemblyName>
+		<Description>The TypeAhead control for DotVVM made by DotVVM Contrib community.</Description>
+		<PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Scripts\typeahead.bundle.min.js" />
-  </ItemGroup>
+	<ItemGroup>
+		<None Remove="Scripts\typeahead.bundle.min.js" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Scripts\DotVVM.Contrib.TypeAhead.js" />
-    <EmbeddedResource Include="Scripts\typeahead.bundle.min.js" />
-    <EmbeddedResource Include="Styles\DotVVM.Contrib.TypeAhead.css" />
-  </ItemGroup>
+	<ItemGroup>
+		<EmbeddedResource Include="Scripts\DotVVM.Contrib.TypeAhead.js" />
+		<EmbeddedResource Include="Scripts\typeahead.bundle.min.js" />
+		<EmbeddedResource Include="Styles\DotVVM.Contrib.TypeAhead.css" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="DotVVM" Version="$(DotvvmVersion)" />
+	</ItemGroup>
 
 </Project>
