--- a/Controls/BootstrapColorpicker/src/DotVVM.Contrib.BootstrapColorpicker.Samples/DotVVM.Contrib.BootstrapColorpicker.Samples.csproj
+++ b/Controls/BootstrapColorpicker/src/DotVVM.Contrib.BootstrapColorpicker.Samples/DotVVM.Contrib.BootstrapColorpicker.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+		<ProjectReference Include="..\DotVVM.Contrib.BootstrapColorpicker\DotVVM.Contrib.BootstrapColorpicker.csproj" />
 	</ItemGroup>
 </Project>
