GoogleAnalyticsJavascript - projects and folders renamed

--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.GoogleAnalyticsJavascript.Samples/DotVVM.Contrib.GoogleAnalyticsJavascript.Samples.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.GoogleAnalyticsJavascript.Samples/DotVVM.Contrib.GoogleAnalyticsJavascript.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.GoogleAnalyticsJavascript.csproj" />
+		<ProjectReference Include="..\DotVVM.Contrib.GoogleAnalyticsJavascript\DotVVM.Contrib.GoogleAnalyticsJavascript.csproj" />
 	</ItemGroup>
 </Project>
