--- a/Controls/MultilevelMenu/src/DotVVM.Contrib.MultilevelMenu.Samples/DotVVM.Contrib.MultilevelMenu.Samples.csproj
+++ b/Controls/MultilevelMenu/src/DotVVM.Contrib.MultilevelMenu.Samples/DotVVM.Contrib.MultilevelMenu.Samples.csproj
@@ -1,4 +1,4 @@
-<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project ToolsVersion="15.0" Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.MultilevelMenu\DotVVM.Contrib.MultilevelMenu.csproj" />
   </ItemGroup>
 </Project>
