NoUiSlider - projects and folders renamed

--- a/Controls/NoUiSlider/src/DotVVM.Contrib.NoUiSlider.Samples/DotVVM.Contrib.NoUiSlider.Samples.csproj
+++ b/Controls/NoUiSlider/src/DotVVM.Contrib.NoUiSlider.Samples/DotVVM.Contrib.NoUiSlider.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.NoUiSlider\DotVVM.Contrib.NoUiSlider.csproj" />
   </ItemGroup>
 </Project>
