Select2 - projects and folders renamed

--- a/Controls/Select2/src/DotVVM.Contrib.Select2.Samples/DotVVM.Contrib.Select2.Samples.csproj
+++ b/Controls/Select2/src/DotVVM.Contrib.Select2.Samples/DotVVM.Contrib.Select2.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.Select2.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.Select2\DotVVM.Contrib.Select2.csproj" />
   </ItemGroup>
 </Project>
