--- a/Controls/Select2/src/DotVVM.Contrib.Select2.Samples/Properties/launchSettings.json
+++ b/Controls/Select2/src/DotVVM.Contrib.Select2.Samples/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:46582/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:46582/"
     }
   },
   "profiles": {
