--- a/Controls/TemplateSelector/src/DotVVM.Contrib.TemplateSelector.Samples/DotVVM.Contrib.TemplateSelector.Samples.csproj
+++ b/Controls/TemplateSelector/src/DotVVM.Contrib.TemplateSelector.Samples/DotVVM.Contrib.TemplateSelector.Samples.csproj
@@ -20,6 +20,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+		<ProjectReference Include="..\DotVVM.Contrib.TemplateSelector\DotVVM.Contrib.TemplateSelector.csproj" />
 	</ItemGroup>
 </Project>
