TypeAhead - projects and folders renamed

--- a/Controls/TypeAhead/src/DotVVM.Contrib.TypeAhead.Samples/DotVVM.Contrib.TypeAhead.Samples.csproj
+++ b/Controls/TypeAhead/src/DotVVM.Contrib.TypeAhead.Samples/DotVVM.Contrib.TypeAhead.Samples.csproj
@@ -20,6 +20,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+		<ProjectReference Include="..\DotVVM.Contrib.TypeAhead\DotVVM.Contrib.TypeAhead.csproj" />
 	</ItemGroup>
 </Project>
