--- a/Controls/GoogleMap/src/DotVVM.Contrib.GoogleMap.Samples/DotVVM.Contrib.GoogleMap.Samples.csproj
+++ b/Controls/GoogleMap/src/DotVVM.Contrib.GoogleMap.Samples/DotVVM.Contrib.GoogleMap.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.GoogleMap\DotVVM.Contrib.GoogleMap.csproj" />
   </ItemGroup>
 </Project>
