--- a/Controls/FAIcon/src/DotVVM.Contrib.FAIcon.Samples/DotVVM.Contrib.FAIcon.Samples.csproj
+++ b/Controls/FAIcon/src/DotVVM.Contrib.FAIcon.Samples/DotVVM.Contrib.FAIcon.Samples.csproj
@@ -23,6 +23,6 @@
 		<PackageReference Include="DotVVM.AspNetCore" Version="$(DotvvmVersion)" />
 	</ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DotVVM.Contrib\DotVVM.Contrib.FAIcon.csproj" />
+    <ProjectReference Include="..\DotVVM.Contrib.FAIcon\DotVVM.Contrib.FAIcon.csproj" />
   </ItemGroup>
 </Project>
