--- a/Controls/SvgParser/src/DotVVM.Contrib.SvgParser.Samples/Properties/launchSettings.json
+++ b/Controls/SvgParser/src/DotVVM.Contrib.SvgParser.Samples/Properties/launchSettings.json
@@ -1,22 +1,11 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:60343/",
-      "sslPort": 44341
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
+    "DotVVM.Contrib.Samples": {
+      "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
-    },
-    "DotVVM.Contrib.Samples": {
-      "commandName": "Project"
     }
   }
 }
