--- a/Controls/Directory.Build.props
+++ b/Controls/Directory.Build.props
@@ -1,5 +1,8 @@
 <Project>
   <PropertyGroup>
+    <ControlTargetFrameworks>netstandard2.1;net472</ControlTargetFrameworks>
+    <SamplesTargetFramework>net8.0</SamplesTargetFramework>
+    <TestsTargetFramework>net8.0</TestsTargetFramework>
     <DotvvmVersion>5.0.0-preview02-final</DotvvmVersion>
     <RigantiSeleniumVersion>2.0.1</RigantiSeleniumVersion>
     <XunitVersion>2.4.1</XunitVersion>
