--- a/Controls/_template/src/DotVVM.Contrib.ControlName/DotVVM.Contrib.ControlName.csproj
+++ b/Controls/_template/src/DotVVM.Contrib.ControlName/DotVVM.Contrib.ControlName.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
-	<PackageId>DotVVM.Contrib.ControlName</PackageId>
+	  <TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
+	  <PackageId>DotVVM.Contrib.ControlName</PackageId>
 	  <AssemblyName>DotVVM.Contrib.ControlName</AssemblyName>
 	  <Authors>DotVVM Contrib</Authors>
     <Description>The ControlName control for DotVVM made by DotVVM Contrib community.</Description>
