--- a/Controls/EditableForm/src/DotVVM.Contrib.EditableForm/DotVVM.Contrib.EditableForm.csproj
+++ b/Controls/EditableForm/src/DotVVM.Contrib.EditableForm/DotVVM.Contrib.EditableForm.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+		<TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.EditableForm</PackageId>
 		<RootNamespace>DotVVM.Contrib.EditableForm</RootNamespace>
 		<Description>The EditableForm control for DotVVM made by DotVVM Contrib community.</Description>
