--- a/Controls/FAIcon/src/DotVVM.Contrib.FAIcon/DotVVM.Contrib.FAIcon.csproj
+++ b/Controls/FAIcon/src/DotVVM.Contrib.FAIcon/DotVVM.Contrib.FAIcon.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+	  <TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 	  <PackageId>DotVVM.Contrib.FAIcon</PackageId>
     <Authors>DotVVM Contrib</Authors>
     <Description>The FAIcon control for DotVVM made by DotVVM Contrib community.</Description>
