--- a/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.GoogleAnalyticsJavascript/DotVVM.Contrib.GoogleAnalyticsJavascript.csproj
+++ b/Controls/GoogleAnalyticsJavascript/src/DotVVM.Contrib.GoogleAnalyticsJavascript/DotVVM.Contrib.GoogleAnalyticsJavascript.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+		<TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.GoogleAnalyticsJavascript</PackageId>
 		<AssemblyName>DotVVM.Contrib.GoogleAnalyticsJavascript</AssemblyName>
 		<Description>The GoogleAnalyticsJavascript control for DotVVM made by DotVVM Contrib community.</Description>
