--- a/Controls/GoogleMap/src/DotVVM.Contrib.GoogleMap/DotVVM.Contrib.GoogleMap.csproj
+++ b/Controls/GoogleMap/src/DotVVM.Contrib.GoogleMap/DotVVM.Contrib.GoogleMap.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+	  <TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 	  <PackageId>DotVVM.Contrib.GoogleMap</PackageId>
 	  <AssemblyName>DotVVM.Contrib.GoogleMap</AssemblyName>
 	  <Description>The GoogleMap control for DotVVM made by DotVVM Contrib community.</Description>
