--- a/Controls/MultilevelMenu/src/DotVVM.Contrib.MultilevelMenu/DotVVM.Contrib.MultilevelMenu.csproj
+++ b/Controls/MultilevelMenu/src/DotVVM.Contrib.MultilevelMenu/DotVVM.Contrib.MultilevelMenu.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+		<TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 		<PackageId>DotVVM.Contrib.MultilevelMenu</PackageId>
 		<Description>The MultilevelMenu control for DotVVM made by DotVVM Contrib community.</Description>
 		<AssemblyName>DotVVM.Contrib.MultilevelMenu</AssemblyName>
