--- a/Controls/PolicyView/src/DotVVM.Contrib.PolicyView/DotVVM.Contrib.PolicyView.csproj
+++ b/Controls/PolicyView/src/DotVVM.Contrib.PolicyView/DotVVM.Contrib.PolicyView.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
+	  <TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
 	  <PackageId>DotVVM.Contrib.PolicyView</PackageId>
     <Description>The PolicyView control for DotVVM made by DotVVM Contrib community.</Description>
     <PackageTags>dotvvm;asp.net;mvvm;owin;dotnetcore;dnx</PackageTags>
