--- a/Controls/SvgParser/src/DotVVM.Contrib.SvgParser/DotVVM.Contrib.SvgParser.csproj
+++ b/Controls/SvgParser/src/DotVVM.Contrib.SvgParser/DotVVM.Contrib.SvgParser.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-	  <TargetFrameworks>netstandard2.1;net472</TargetFrameworks>
-	<PackageId>DotVVM.Contrib.SvgParser</PackageId>
+	  <TargetFrameworks>$(ControlTargetFrameworks)</TargetFrameworks>
+	  <PackageId>DotVVM.Contrib.SvgParser</PackageId>
 	  <AssemblyName>DotVVM.Contrib.SvgParser</AssemblyName>
 	  <Authors>DotVVM Contrib</Authors>
     <Description>The SvgParser control for DotVVM made by DotVVM Contrib community.</Description>
